修改project页面相关前后台

--- a/tm-admin/index.html
+++ b/tm-admin/index.html
@@ -27,6 +27,8 @@
             margin-bottom: 5px;
             border-radius: 5px;
             overflow: hidden;
+            width: 100%;
+            box-sizing: border-box;
         }
 
         body .dialog--editor {
@@ -63,10 +65,10 @@
             text-align: center;
         }
     </style>
-<link href="css/main.10bc106.css" rel="stylesheet"></head>
+<link href="css/main.c863272.css" rel="stylesheet"></head>
 
 <body class="app">
 <div id="app"></div>
-<script type="text/javascript" src="js/vendors.10bc106.js"></script><script type="text/javascript" src="js/main.10bc106.js"></script></body>
+<script type="text/javascript" src="js/vendors.c863272.js"></script><script type="text/javascript" src="js/main.c863272.js"></script></body>
 
 </html>
