--- a/tm-admin/index.html
+++ b/tm-admin/index.html
@@ -50,6 +50,9 @@
             min-height: 36px;
             margin: 0 4px;
         }
+        .grid-content img{
+            max-height: 150px;
+        }
 
         .imgPerview {
             max-height: 100px;
@@ -65,10 +68,10 @@
             text-align: center;
         }
     </style>
-<link href="css/main.bb1ae8a.css" rel="stylesheet"></head>
+<link href="css/main.a193478.css" rel="stylesheet"></head>
 
 <body class="app">
 <div id="app"></div>
-<script type="text/javascript" src="js/vendors.bb1ae8a.js"></script><script type="text/javascript" src="js/main.bb1ae8a.js"></script></body>
+<script type="text/javascript" src="js/vendors.a193478.js"></script><script type="text/javascript" src="js/main.a193478.js"></script></body>
 
 </html>
